Fix mobile title overflow in portfolio modal
Add styles to fix long titles in portfolio modal on mobile.

--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -41,3 +41,10 @@ $contact-image: "{{ site.data.style.contact-image }}";
 @import "layout/team.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
+
+/* Fix long portfolio modal titles on mobile */
+.portfolio-modal h2 {
+  white-space: normal;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
